# ferrous-quant

./: .gitignore  Cargo.toml  Justfile  README.md
crates/quant-backtest/src/: lib.rs
crates/quant-book/: Cargo.toml
crates/quant-book/src/: ch06_ibkr_integration.rs
crates/quant-execution/src/: lib.rs
crates/quant-ibkr/src/: lib.rs
crates/quant-indicators/: README.md
crates/quant-patterns/src/: actor.rs  builder.rs  command.rs  observer.rs  strategy.rs
crates/quant-risk/src/: lib.rs
docs/: DESIGN_PATTERNS.md  TEST_REPORT.md
